[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/UI/gear.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/vegur/Vegur-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ModListItem.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/trashcan.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/trashcanOpen.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/vegur/Vegur-Light.otf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.501961, 0, 0.294118 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 12
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 9 )
script = ExtResource( 3 )

[node name="default_background" type="Panel" parent="."]
margin_right = 287.0
margin_bottom = 57.0
custom_styles/panel = SubResource( 5 )

[node name="active_background" type="Panel" parent="."]
visible = false
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="error_background" type="Panel" parent="."]
visible = false
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 50.0
margin_right = 237.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_constants/separation = 3
alignment = 1

[node name="Space" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 187.0
margin_bottom = 9.0

[node name="ModName" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 187.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Mod Name"
valign = 1
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 187.0
margin_bottom = 45.0

[node name="VersionLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 237.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Version"
valign = 1

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 237.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "1.0"
valign = 1

[node name="Space2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 187.0
margin_bottom = 48.0

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 237.0
margin_right = 287.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 0 )

[node name="Select" type="HBoxContainer" parent="."]
margin_right = 287.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="select" type="Button" parent="Select"]
margin_right = 233.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 7 )

[node name="TextureButton" type="TextureButton" parent="Select"]
margin_left = 237.0
margin_right = 287.0
margin_bottom = 57.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[connection signal="pressed" from="Select/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Select/TextureButton" to="." method="_on_TextureButton_pressed"]
